# uidemo2

./: .gitignore  CMakeLists.txt  PROJECT.md  README.md  SqlHighlighter.cpp  SqlHighlighter.cpp.bak  SqlHighlighter.h  callback.c  gncdb_ui2  log_testdb.db  mainwindow.cpp  mainwindow.h  mainwindow.h.bak  mainwindow.ui  new.db  newdb.db  newdb2.db  settings.ini  testdb.db  vacumntest.db  vacuumtest2.db  测试语句 copy  需求.md
.VSCodeCounter/2025-05-07_16-33-53/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-05-07_16-34-42/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cursor/rules/: readmd.mdc
database/: CMakeLists.txt  dbmanager.cpp  dbmanager.h  sqlresult.h
rc2msg/: CMakeLists.txt  rc2msg.cpp  rc2msg.h  rc2msg.pro
resources/: resources.qrc
ui/: CMakeLists.txt  tabledialog.cpp  tabledialog.h
vacuum/: CMakeLists.txt
vacuum/include/: adaptiveSort.h  dbInfo.h  fileModification.h  vacuum.h
